# active_allegro

./: CHANGELOG.md
GMD_active_learning/: AGENTS.md  README.md  pyproject.toml
GMD_active_learning/configs/: active_learning.yaml  dft_labeling.yaml  monitor.yaml  retraining.yaml
GMD_active_learning/examples/: ase_callback_example.py  minimal_active_learning_loop.py  minimal_lj_monitor_example.py
GMD_active_learning/scripts/: analyze_candidates.py  run_active_learning.py
GMD_active_learning/src/GMD_active_learning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
GMD_active_learning/src/gmd_active_learning/: __init__.py  cli.py
GMD_active_learning/src/gmd_active_learning/active_learning/: __init__.py  candidate_queue.py  candidate_selector.py  deduplicate.py  state_manager.py  workflow.py
GMD_active_learning/src/gmd_active_learning/adapters/: __init__.py  ase_adapter.py  base.py  gmd_adapter.py  gmd_se3gnn_adapter.py
GMD_active_learning/src/gmd_active_learning/core/: __init__.py  constants.py  data_types.py  exceptions.py  structures.py
GMD_active_learning/src/gmd_active_learning/labeling/: __init__.py  base_labeler.py  cp2k_labeler.py  job_writer.py  vasp_labeler.py
GMD_active_learning/src/gmd_active_learning/monitors/: __init__.py  base_monitor.py  ensemble_deviation.py  lj_projection.py  physical_checks.py  reliability_monitor.py  risk_score.py
GMD_active_learning/tests/: test_candidate_queue.py  test_lj_projection.py  test_physical_checks.py  test_reliability_model.py  test_reliability_monitor.py  test_workflow.py
(+16 files in other folders)
